--- a/.prettierrc
+++ b/.prettierrc
@@ -1,19 +1,15 @@
 {
-    "overrides": [
-        {
-            "files": [
-                "*.sol",
-                "*.js",
-                "*.ts"
-            ],
-            "options": {
-                "printWidth": 100,
-                "tabWidth": 4,
-                "useTabs": false,
-                "singleQuote": true,
-                "bracketSpacing": true,
-                "explicitTypes": "always"
-            }
-        }
-    ]
+  "overrides": [
+    {
+      "files": ["*.sol", "*.js", "*.ts"],
+      "options": {
+        "printWidth": 100,
+        "tabWidth": 4,
+        "useTabs": false,
+        "singleQuote": true,
+        "bracketSpacing": true,
+        "explicitTypes": "always"
+      }
+    }
+  ]
 }
