Add OZ basic tests

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ ETHERSCAN_API_KEY=
 BSCSCAN_API_KEY=
 COINMARKETCAP_API_KEY=
 ETH_NODE_API_KEY=
+POLYGON_NODE_API_KEY=
+BINANCE_NODE_API_KEY=
 PRIVATE_KEY=
-
-
