--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "contract:size": "hardhat size-contracts;",
     "fork": "hardhat node",
     "test": "hardhat test",
-    "test:coverage": "hardhat coverage  --testfiles 'test/unit/*.ts'",
+    "test:coverage": "hardhat coverage  --testfiles 'test/*.ts'",
     "test:verbose": "hardhat test --verbose test/*.ts",
     "deploy:mainnet": "hardhat run --network mainnet ./scripts/deploy.js",
     "deploy:rinkeby": "hardhat run --network rinkeby --gasprice 1000000000 ./scripts/deploy.js",
@@ -32,7 +32,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-ganache": "^2.0.1",
-    "@nomiclabs/hardhat-truffle5": "^2.0.5",
+    "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "4.7.3",
